[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/voxel_factory/voxel_editor.gd" type="Script" id=1]
[ext_resource path="res://addons/voxel_factory/editor_view.tscn" type="PackedScene" id=2]

[sub_resource type="Environment" id=1]
background_energy = 0.0

[sub_resource type="World" id=2]
environment = SubResource( 1 )

[node name="Voxel Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_right = 1280.0
margin_bottom = 25.0

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 47.0
margin_bottom = 25.0
text = "Open"
flat = true

[node name="Button2" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 51.0
margin_right = 92.0
margin_bottom = 25.0
text = "Save"
flat = true

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 154.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 0 )
text = "1/4"
align = 1
editable = false
context_menu_enabled = false

[node name="HSlider" type="HSlider" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 158.0
margin_right = 258.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3
min_value = 1.0
max_value = 6.0
value = 1.0
ticks_on_borders = false

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 262.0
margin_right = 287.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
shortcut_in_tooltip = false
edit_alpha = false

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 29.0
margin_right = 1280.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/MarginContainer2"]
margin_right = 1280.0
margin_bottom = 671.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="VBoxContainer/MarginContainer2/ViewportContainer"]
size = Vector2( 1280, 671 )
own_world = true
world = SubResource( 2 )
handle_input_locally = false
hdr = false
debug_draw = 1
render_target_update_mode = 3

[node name="Spatial" parent="VBoxContainer/MarginContainer2/ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 704.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer3"]
margin_right = 1280.0
margin_bottom = 16.0
alignment = 2

[node name="VoxPosition" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 1070.0
margin_top = 1.0
margin_right = 1118.0
margin_bottom = 15.0
text = "(0, 2, 0)"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 1122.0
margin_right = 1126.0
margin_bottom = 16.0

[node name="ZoomSlider" type="HSlider" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 1130.0
margin_right = 1280.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
min_value = 45.0
value = 75.0
ticks_on_borders = false

[node name="OpenDialog" type="FileDialog" parent="."]
margin_right = 524.0
margin_bottom = 256.0
window_title = "Open a mesh"
mode = 0
filters = PoolStringArray( "*.tres" )

[node name="SaveDialog" type="FileDialog" parent="."]
margin_right = 526.0
margin_bottom = 258.0
filters = PoolStringArray( "*.tres" )

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Button" to="." method="_on_Open_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Button2" to="." method="_on_Save_pressed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer3/HBoxContainer/ZoomSlider" to="." method="_on_ZoomSlider_value_changed"]
[connection signal="file_selected" from="OpenDialog" to="." method="_on_OpenDialog_file_selected"]
